--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -52,12 +52,17 @@ h2{
 .ant-col {
     margin-inline-start: 0 !important;
   }
-
 .custom-link:hover {
     color: #f9ab00;
   }
+.text-align-center{
+    text-align: center;
+}
 input:focus {
     outline: none;
+}
+.padding-top-loading{
+    padding-top: 100px;
 }
 .section-space {
     padding: 20px 0;
@@ -67,6 +72,16 @@ input:focus {
     background: #f9ab00;
     color: #fff;
     text-shadow: none;
+}
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #1f1f1f;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
 }
 @media(max-width: 780px){
     h2{
